<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">



    <ImageView
        android:id="@+id/sign_up_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_title"
        android:layout_marginBottom="60.3dp"
        />
    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        android:textSize="24sp"
        android:lineSpacingExtra="-6sp"
        android:textColor="#222222"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <EditText
        android:id="@+id/sign_in_id_ed"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="@string/input_email"
        android:textSize="14sp"
        android:textColor="#444444"
        android:textColorHint="#444444"
        android:letterSpacing="0.2"
        android:gravity="center_vertical"
        android:background="@drawable/edittext_border"
        android:singleLine = "true"
        android:lines = "1"

        app:layout_constraintTop_toBottomOf="@+id/sign_in_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        />


    <EditText
        android:id="@+id/sign_in_pw_ed"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="@string/pw"
        android:textSize="14sp"
        android:textColor="#444444"
        android:textColorHint="#444444"
        android:letterSpacing="0.2"
        android:gravity="center_vertical"
        android:background="@drawable/edittext_border"
        android:inputType="textPassword"
        android:singleLine = "true"
        android:lines = "1"


        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_id_ed"
        android:layout_marginTop="10dp"
        />



    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:text="@string/sign_up"
        android:textColor="@color/white_two"
        android:textSize="16sp"
        android:background="@drawable/sing_up_btn"

        app:layout_constraintTop_toBottomOf="@+id/sign_in_pw_ed"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/sign_in_pw_ed"
        />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:text="@string/sign_in"
        android:textColor="@color/white_two"
        android:textSize="16sp"
        android:background="@drawable/sign_in_btn"

        app:layout_constraintTop_toBottomOf="@+id/sign_in_pw_ed"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_pw_ed"
        />
    <TextView
        android:id="@+id/find_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/brownish_grey"
        android:text="@string/find_account_tv"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>