<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/publisher_name"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <TextView
        android:id="@+id/publisher_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/brownish_grey"
        android:text="@string/publisher_tv"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/publisher_name"
        app:layout_constraintTop_toTopOf="@+id/publisher_name"
        app:layout_constraintBottom_toBottomOf="@+id/publisher_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginRight="10dp"

        />
    <TextView
        android:id="@+id/publisher_name"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:background="@drawable/edittext_border"
        android:text="김정기 차장"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/publisher_tv"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/receiver_name"
        app:layout_constraintTop_toBottomOf="@+id/create_business_toolbar"
        android:layout_marginTop="0dp"

        />
    <TextView
        android:id="@+id/receiver_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/brownish_grey"
        android:text="@string/receiver_tv"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/receiver_name"
        app:layout_constraintTop_toTopOf="@+id/receiver_name"
        app:layout_constraintBottom_toBottomOf="@+id/receiver_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/publisher_tv"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <TextView
        android:id="@+id/receiver_name"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:background="@drawable/edittext_border"
        android:text="안현모 대리"


        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/publisher_tv"
        app:layout_constraintTop_toBottomOf="@+id/publisher_name"
        app:layout_constraintEnd_toEndOf="@+id/publisher_name"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/company_name"
        />
    <TextView
        android:id="@+id/company_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/brownish_grey"
        android:text="@string/publisher_tv"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/company_name"
        app:layout_constraintTop_toTopOf="@+id/company_name"
        app:layout_constraintBottom_toBottomOf="@+id/company_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:id="@+id/company_name"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:background="@drawable/edittext_border"
        android:text="(주) 해냄"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/company_tv"
        app:layout_constraintTop_toBottomOf="@+id/receiver_name"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/instruction_title"
        />
    <TextView
        android:id="@+id/instruction_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:background="@drawable/edit_text_border2"
        android:layout_marginTop="15dp"
        android:textColor="@color/greyish_brown"
        android:inputType="text"
        android:text="@string/instruction_title"
        android:gravity="center_vertical"


        app:layout_constraintTop_toBottomOf="@+id/company_name"
        app:layout_constraintBottom_toTopOf="@+id/create_business_scroll"
        app:layout_constraintVertical_chainStyle="packed"
        />


    <LinearLayout
        android:id="@+id/create_business_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="15dp"

        app:layout_constraintTop_toBottomOf="@+id/instruction_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/period_container"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="false"
            >
            <TextView
                android:id="@+id/instruction_contents"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/edit_text_border2"
                android:gravity="top"
                android:text="@string/instruction_contents"
                android:textSize="13sp"
                android:textColor="@color/brownish_grey"
                android:lineSpacingExtra="7sp"
                android:inputType="text"


                app:layout_constraintTop_toBottomOf="@+id/instruction_title"
                app:layout_constraintVertical_chainStyle="packed"
                />
        </ScrollView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/period_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_border"


        android:layout_marginTop="5dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toBottomOf="parent"


        >

        <TextView
            android:id="@+id/deadline_date_tv"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/round_btn"
            android:text="@string/deadline_date"
            android:gravity="center"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/calendar_deadline_date"
            android:layout_width="80dp"
            android:layout_height="21dp"
            android:text="2019.12.29"
            android:textSize="13sp"
            android:textColor="@color/greyish_brown"

            app:layout_constraintLeft_toRightOf="@+id/deadline_date_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/issue_day_tv"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:textSize="12sp"
            android:textColor="@color/warm_grey"
            android:text="2019.12.24"
            android:gravity="center_vertical"

            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="17dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/business_order_return_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/return_btn_pumpkin_orange"
        android:text="@string/return_btn"
        android:textColor="@color/white_two"
        android:textSize="16sp"

        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/business_order_hold_btn"
        />
    <Button
        android:id="@+id/business_order_hold_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/hold_btn_777777"
        android:text="@string/hold_btn"
        android:textColor="@color/white_two"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintRight_toLeftOf="@+id/business_order_approval_btn"
        app:layout_constraintLeft_toRightOf="@+id/business_order_return_btn"
        />
    <Button
        android:id="@+id/business_order_approval_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/approval_purpleish_blue"
        android:text="@string/approval_btn"
        android:textColor="@color/white_two"
        android:textSize="16sp"

        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/business_order_hold_btn"
        />
    <Button
        android:id="@+id/business_order_reason_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/approval_purpleish_blue"
        android:visibility="invisible"
        android:textColor="@color/white_two"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>