<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="340dp"
    android:layout_gravity="center"
    android:theme="@style/Theme.Transparent"
    >

    <TextView
        android:id="@+id/reason_title_tv"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="@string/return_reason"
        android:textSize="16sp"
        android:textColor="@color/greyish_brown"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/edittext_border"
        />
    <LinearLayout
        android:id="@+id/reason_popup_scroll"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/reason_title_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reason_buttons_background"
        app:layout_constraintHorizontal_chainStyle="packed"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false"
        >
        <EditText
            android:id="@+id/reason_contents"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="13sp"
            android:textColor="@color/greyish_brown"
            android:background="@drawable/edit_text_border2"
            android:lineSpacingExtra="7sp"
            android:gravity="top"
            />

    </ScrollView>
    </LinearLayout>
    <ImageView
        android:id="@+id/reason_buttons_background"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/edittext_border"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reason_popup_scroll"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <Button
        android:id="@+id/reason_cancel_btn"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/hold_btn_777777"
        android:text="@string/cancel_btn"
        android:textColor="@color/white_two"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintRight_toLeftOf="@+id/reason_check_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <Button
        android:id="@+id/reason_check_btn"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/sign_in_btn"
        android:textColor="@color/white_two"
        android:textSize="14sp"
        android:text="@string/check_btn"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/reason_cancel_btn"
        android:layout_marginLeft="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        />


</androidx.constraintlayout.widget.ConstraintLayout>